--- a/style.css
+++ b/style.css
@@ -24,7 +24,14 @@ h1
 	color: #000;
 	margin-bottom: 70px;
 	font-size: 45px;
-	letter-spacing: 2px; 
+	letter-spacing: 2px;
+	text-align: center;
+}
+p
+{
+	color: #000;
+	font-size: 22px;
+	letter-spacing:1px;
 	text-align: center;
 }
 
