--- a/style.css
+++ b/style.css
@@ -1,7 +1,7 @@
 body{
 	margin: 0;
 	padding: 0;
-	background-image: url(../Procol-Harum-box.jpg);
+	background-image: url("image0.jpg");
 	background-position: center;
 }
 
